# ros_noetic_projects

chat_pkg/: CMakeLists.txt  package.xml
chat_pkg/src/: listener.cpp
custom_services/: CMakeLists.txt  package.xml
first_pkg/: CMakeLists.txt  package.xml
first_pkg/scripts/: hello.py
first_pkg/src/: hello.cpp
homework1/: CMakeLists.txt  package.xml
homework1/launch/: draw_letter.launch  draw_letter_py.launch
homework1/scripts/: draw_letter.py
homework1/src/: drawLetter.cpp
homography_ros/: CMakeLists.txt  README.md  package.xml
homography_ros/nodes/: fake_publisher.py  homography.py  send_image_service.py
homography_ros/srv/: ImageData.srv
lidar_tasks/: CMakeLists.txt  README.md  package.xml
lidar_tasks/launch/: gazebo.launch  rviz.launch
lidar_tasks/nodes/: scan_publisher.py  subscriber.py  wall_state.py
lidar_tasks/rviz/: config.rviz
lidar_tasks/worlds/: test.world
map_cleaner/: CMakeLists.txt  package.xml
mapping/: CMakeLists.txt  package.xml
mapping/maps/: changes.pgm  example.pgm  example777.pgm  final_map777.pgm  final_map777.yaml  map.pgm  map.yaml
mapping/scripts/: map_client.py  map_server.py
mapping/srv/: MapData.srv
my_turtle/: CMakeLists.txt  package.xml
my_turtle/src/: moveturtle.cpp  moveturtleposname.cpp
opencv-ros-template-master/nodes/: publisher.py  subscriber.py
pid_laser_robot/: CMakeLists.txt  README.md  package.xml
pid_laser_robot/launch/: gazebo.launch
pid_laser_robot/models/wall/: model.sdf
pid_laser_robot/nodes/: pid_robot.py  subscriber.py
pid_laser_robot/worlds/: lidar_world
ros-lidar-examples/: CMakeLists.txt  README.md
ros-lidar-examples/nodes/: task2.py  task3.py
simple_counter/: CMakeLists.txt  package.xml
simple_counter/action/: Counter.action
simple_counter/scripts/: simple_counter_client.py  simple_counter_server.py
simple_counter/src/: simple_counter_client.cpp  simple_counter_server.cpp
tf_demo/: CMakeLists.txt  package.xml
turtlebot3_navigation_demo/: CMakeLists.txt  package.xml
turtlebot3_navigation_demo/launch/: turtlebot3_playground.launch
turtlebot3_navigation_demo/scripts/: box_finder.py  calculate_side.py  nail.py  new_test_robot.py  rotate.py  test_lidar.py  test_lidar2.py  test_robot.py  test_robot2.py
waller/: CMakeLists.txt  package.xml
waller/launch/: waller.launch  waller_py.launch
waller/scripts/: test.py  waller.py
waller/src/: Waller.h  WallerNode.cpp  run_waller.cpp
wander_bot/: CMakeLists.txt
wander_bot/scripts/: stopper.py
wander_bot/src/: Stopper.cpp  Stopper.h  run_stopper.cpp
webcam_task/: CMakeLists.txt  README.md  package.xml
webcam_task/launch/: Webcam.launch
webcam_task/msg/: Motion.msg
webcam_task/nodes/: color_detector.py  detector.py  detector_subscriber.py  publisher.py  subscriber.cpp  subscriber.py
